--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -81,8 +81,6 @@ h1 {
   </head>
 
   <body>
-
-    <h1> <img src="InterviewIQ2.jpg" align="middle"> </h1>
     
   <ul class="ul-style">
    <li style="float:left"><a href="index.html" class="a-dropbtn">Home    </a></li>
@@ -107,6 +105,13 @@ h1 {
      </div>
    </li>
   </ul>
+    
+    <div class="header">
+  <img src="InterviewIQ2.jpg" align="middle">
+
+</div>
+    
+    
     
   </body>
 </html>
