--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -3,6 +3,13 @@
     <title>InterviewIQ</title>
     <style>
 
+      
+     img{
+    margin-left: -(X/2)px;
+    margin-top: -(Y/2)px;
+      }
+      
+      
     .ul-style {
        list-style-type: none;
        margin: 0;
