--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -4,7 +4,7 @@
     <style>
 
       
-     img{
+     .header img{
     margin-left: -(X/2)px;
     margin-top: -(Y/2)px;
       }
@@ -115,8 +115,8 @@ h1 {
     
     <div class="header">
   <img src="InterviewIQ2.jpg" align="middle">
-
-</div>
+      <h1> </h1>
+    </div>
     
     
     
