--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -4,10 +4,12 @@
     <style>
 
       
-     .header img{
-    margin-left: -(X/2)px;
-    margin-top: -(Y/2)px;
-      }
+    .logo {
+  text-align: center;
+}
+.logo img {
+  width: 50%;
+}
       
       
     .ul-style {
@@ -113,11 +115,7 @@ h1 {
    </li>
   </ul>
     
-    <div class="header">
-  <img src="InterviewIQ2.jpg" align="middle">
-      <h1> </h1>
-    </div>
-    
+    <div class="logo"><img src="InterviewIQ2.jpg"></div>
     
     
   </body>
