--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -93,6 +93,7 @@ h1 {
   <body>
     
   <ul class="ul-style">
+    <li style="float:left"> <div class="logo"> class="a-dropbtn"><img src="InterviewIQ2.jpg"></div></li>
    <li style="float:left"><a href="index.html" class="a-dropbtn">Home    </a></li>
    <li style="float:left"><a href="agenda.html" class="a-dropbtn">Agenda    </a></li>
    <li style="float:left"><a href ="Calendar.html" class="a-dropbtn">Calendar    </a></li>
