--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -88,7 +88,6 @@ h1 {
     
 </style>
     <link href="../static/interviewQA.css" rel="stylesheet">
-    <h1> </h1>
 
   <body>
     
@@ -116,7 +115,9 @@ h1 {
    </li>
   </ul>
     
-    <div class="logo"><img src="InterviewIQ2.jpg"></div>
+    <div class="logo"><img src="InterviewIQ2.jpg">
+    <h1> </h1>
+    </div>
     
     
   </body>
