--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -4,10 +4,14 @@
     <style>
 
       
-    .logo {
+    .header h1 {
+      background-color: #444;
+      padding: 15px;
   text-align: center;
 }
-.logo img {
+.header img {
+  padding: 15px;
+  text-align: center;
   width: 20%;
   background-color: #444;
 }
@@ -115,10 +119,12 @@ h1 {
    </li>
   </ul>
     
-    <div class="logo"><img src="InterviewIQ2.jpg">
-    <h1> </h1>
-    </div>
     
+    <div class="header">
+  <img src="InterviewIQ2.jpg"/>
+  <h1>My </h1>
+</div>
+   
     
   </body>
 </html>
