--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -4,14 +4,10 @@
     <style>
 
       
-    .header h1 {
-      background-color: #444;
-      padding: 15px;
+    .logo {
   text-align: center;
 }
-.header img {
-  padding: 15px;
-  text-align: center;
+.logo img {
   width: 20%;
   background-color: #444;
 }
