--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -6,10 +6,12 @@
       
     .logo {
   text-align: center;
+      background-color: #444;
 }
 .logo img {
   width: 20%;
   background-color: #444;
+  text-align: center;
 }
       
       
@@ -116,10 +118,8 @@ h1 {
   </ul>
     
     
-    <div class="header">
-  <img src="InterviewIQ2.jpg"/>
-  <h1>My </h1>
-</div>
+   <div class="header">
+  <img src="InterviewIQ2.jpg"/></div>
    
     
   </body>
