--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -117,10 +117,8 @@ h1 {
    </li>
   </ul>
     
-    
-   <div class="header">
-  <img src="InterviewIQ2.jpg"/></div>
    
+   <div class="logo"><img src="InterviewIQ2.jpg"></div>
     
   </body>
 </html>
