--- a/business_app/app/templates/about.html
+++ b/business_app/app/templates/about.html
@@ -25,6 +25,8 @@
       font-family: "Helvetica Neue";
       font size: 20px;
       background-color: #F5F5F5;
+      width:1024px;
+      height:auto;
    }
    
 
