--- a/business_app/app/templates/about.html
+++ b/business_app/app/templates/about.html
@@ -25,7 +25,7 @@
       font-family: "Helvetica Neue";
       font size: 20px;
       background-color: #F5F5F5;
-      width:1024px;
+      padding: 10px;
       height:auto;
    }
    
