--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -11,10 +11,14 @@
 h2{
   font-family: "Helvetica Neue";
   background-color: #F5F5F5;
+  margin-left: 25%;
+    margin-right: 25%;
   }
   body{
    font-family: "Helvetica Neue"; 
     background-color: #F5F5F5;
+   margin-left: 25%;
+    margin-right: 25%;
   }
 </style>
 
