--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -7,20 +7,17 @@
   h1 {
     font-family: "Helvetica Neue";
     background-color: #F5F5F5;
-   margin-left: 3%;
-    margin-right: 3%;
+   padding: 10px;
   }
 h2{
   font-family: "Helvetica Neue";
   background-color: #F5F5F5;
-  margin-left: 3%;
-   margin-right: 3%;
+  padding: 10px;
   }
   body{
    font-family: "Helvetica Neue"; 
     background-color: #F5F5F5;
-   margin-left: 3%;
-    margin-right: 3%;
+   padding: 10px;
   }
 </style>
 
