--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -6,11 +6,13 @@
   h1{
     font-family: "Helvetica Neue";
     background-color: #F5F5F5;
+    padding: 10px;
   }
   
 body { 
   font-family: "Helvetica Neue";
   background-color: #F5F5F5;
+  padding: 10px;
  
 }
 
