--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -11,8 +11,8 @@ body {
 	padding-top: 40px;
   padding-bottom: 40px;
 	font-size: 16px;
-	padding-top: 40px;
-  padding-bottom: 40px;
+	padding-right: 15px;
+	padding-left: 15px;
 	font-family: "Helvetica Neue";
 	
 	}
