--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -78,7 +78,7 @@ input[type=submit]:hover {
 </head>
 <body>
 
-<h2>Add New Event</h2>
+<h2><center>Add New Event<center></h2>
 
 
 <div class="container">
