--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -12,18 +12,18 @@
 h2{
   font-family: "Helvetica Neue";
   background-color: #F5F5F5;
-  padding: 10px;
+  padding: 30px;
   }
   body{
    font-family: "Helvetica Neue"; 
     background-color: #F5F5F5;
-   padding: 10px;
+   padding: 30px;
   }
 </style>
 
 
 
-<h1>Types of Business Attire</h1>
+<h1><center>Types of Business Attire<center></h1>
 
 <h2>Casual Dress:</h2>
 <ul style="list-style-type:disc">
