--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -12,12 +12,16 @@
 h2{
   font-family: "Helvetica Neue";
   background-color: #F5F5F5;
-  padding: 30px;
+  padding: 10px;
+ margin-left: 30px;
+ margin-right: 30px;
   }
   body{
    font-family: "Helvetica Neue"; 
     background-color: #F5F5F5;
-   padding: 30px;
+   padding: 10px;
+   margin-left: 30px;
+ margin-right: 30px;
   }
 </style>
 
