--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -8,11 +8,12 @@
     font-family: "Helvetica Neue";
     background-color: #F5F5F5;
    padding: 10px;
+   text-align: center;
   }
 h2{
   font-family: "Helvetica Neue";
   background-color: #F5F5F5;
-  
+ text-align: center; 
  margin-left: 30px;
  margin-right: 30px;
   }
@@ -22,6 +23,7 @@ h2{
    padding: 10px;
    margin-left: 30px;
  margin-right: 30px;
+   text-align: center;
   }
 </style>
 
