--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -13,13 +13,13 @@
 h2{
   font-family: "Helvetica Neue";
   background-color: #F5F5F5;
- margin-left: 200px;
+ text-align: center;
   }
   body{
    font-family: "Helvetica Neue"; 
     background-color: #F5F5F5;
    padding: 10px;
-   margin-left: 200px; 
+   margin-left: 300px; 
   }
 </style>
 
