--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -17,9 +17,10 @@ h2{
   }
   body{
    font-family: "Helvetica Neue"; 
-    background-color: #F5F5F5;
+   background-color: #F5F5F5;
    padding: 10px;
    margin-left: 300px; 
+   margin-right: 100px;
   }
 </style>
 
