--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -19,63 +19,12 @@ h2{
    font-family: "Helvetica Neue"; 
    background-color: #F5F5F5;
    padding: 10px;
-   margin-left: 50px;
+   width:200px;
+    margin:0 auto;
+    text-align:left;
   }
 </style>
 
-
-<table style="width:100%">
-  <tr>
-    <th></th>
-    <th></th>
-   <th></th>
-  </tr>
- <tr>
-    <td></td>
-    <td align="right"></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td align="right"><h1><center>Types of Business Attire<center></h1>
-
-<h2>Casual Dress:</h2>
-<ul style="list-style-type:disc">
-<li>Jeans, shorts, t-shirts, sandals, and athletic shoes allowed</li>
-<li>Clothing with words, terms, or pictures that may be offensive is unacceptable</li>
-<li>Frayed and dirty clothing is unacceptable</li>
-</ul>
-
-<h2>Business Casual Dress:</h2>
-<ul style="list-style-type:disc">
-<li>Jeans discouraged, unless it is a designated dress down day</li>
-<li>Shorts, sandals, t-shirts, sundresses, and tank tops are not allowed</li>
-<li>Short or long sleeve shirt with collars</li>
-<li>Khakis or corduroys</li>
-<li>Vests and sweaters</li>
-<li>Casual shoes, but no athletic shoes</li>
-</ul>
-
-<h2>Business Formal Dress:</h2>
-<ul style="list-style-type:disc">
-<li>Suits or jackets with dress shirts, ties, formal leather-like shoes</li>
-<li>Skirt suits or pant suits</li>
-<li>Stockings and closed toe leather heel shoes</li>
-</ul>
-
-<h2>Clothing Store Suggestions:</h2>
-<ul style="list-style-type:none">
-<li><a href="https://www.express.com/fashion/jeans">Express</a></li>
-<li><a href="http://www.oldnavy.com/">Old Navy</a></li>
-<li><a href="http://www.bananarepublic.com/">Banana Republic</a></li>
-<li><a href="https://www.jcrew.com/">J Crew</a></li>
-<li><a href="https://shop.nordstrom.com/">Nordstrom</a></li>
-</ul></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td align="right"></td>
-  </tr>
-</table>
 
 <h1><center>Types of Business Attire<center></h1>
 
