--- a/business_app/app/templates/clothing.html
+++ b/business_app/app/templates/clothing.html
@@ -9,11 +9,12 @@
     background-color: #F5F5F5;
    padding: 10px;
    text-align: center;
+   margin-right: 80px;
   }
 h2{
   font-family: "Helvetica Neue";
   background-color: #F5F5F5;
-  margin-left: 30px;
+ 
   }
   body{
    font-family: "Helvetica Neue"; 
