--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -122,5 +122,7 @@ h1 {
    
    <div class="logo"><img src="InterviewIQ2.jpg"></div>
     
+   {% block content %} {% endblock %}
+    
   </body>
 </html>
