--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -120,7 +120,7 @@ h1 {
   </ul>
     
    
-   <div class="logo"><img src="InterviewIQ2.jpg"></div>
+  <img src="{{ url_for('static', filename='InterviewIQ2.jpg') }}" type="image/jpg" class="logo">
     
    {% block content %} {% endblock %}
     
