--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -117,10 +117,11 @@ h1 {
        <a href="signout.html">Sign Out</a>
      </div>
    </li>
+    <li> <img src="{{ url_for('static', filename='InterviewIQ2.jpg') }}" type="image/jpg" class="logo"> </li>
   </ul>
     
    
-  <img src="{{ url_for('static', filename='InterviewIQ2.jpg') }}" type="image/jpg" class="logo">
+
     
    {% block content %} {% endblock %}
     
