--- a/business_app/app/static/style.css
+++ b/business_app/app/static/style.css
@@ -7,6 +7,7 @@ body {
   font-size: 100%;
   line-height: 1.5;
   font-family: "Roboto Condensed", sans-serif;
+  background-color: #F5F5F5;
   background: #28283b;
   background-image: -webkit-linear-gradient(#28283b 0%, #0f0f17 100%);
   background-image: linear-gradient(#28283b 0%, #0f0f17 100%);
@@ -47,6 +48,7 @@ table {
   border-collapse: collapse;
   color: #444;
   font-family: "Helvetica Neue";
+  
 }
 td {
   height: 48px;
