--- a/business_app/app/static/style.css
+++ b/business_app/app/static/style.css
@@ -8,7 +8,7 @@ body {
   line-height: 1.5;
   font-family: "Roboto Condensed", sans-serif;
   background-color: #F5F5F5;
-  background: #28283b;
+  background: #444;
   background-image: -webkit-linear-gradient(#28283b 0%, #0f0f17 100%);
   background-image: linear-gradient(#28283b 0%, #0f0f17 100%);
   color: #444;
