--- a/business_app/app/static/style.css
+++ b/business_app/app/static/style.css
@@ -38,7 +38,7 @@ a {
   padding: 2em;
   border: 1px solid #dcdcff;
   border-radius: 5px;
-  background-color: white;
+  background-color: #444;
 }
 table {
   clear: both;
