--- a/business_app/app/static/style.css
+++ b/business_app/app/static/style.css
@@ -7,7 +7,7 @@ body {
   font-size: 100%;
   line-height: 1.5;
   font-family: "Roboto Condensed", sans-serif;
-  background-color: #F5F5F5;
+  background-color: #444;
   background: #444;
   background-image: -webkit-linear-gradient(#28283b 0%, #0f0f17 100%);
   background-image: linear-gradient(#28283b 0%, #0f0f17 100%);
@@ -38,7 +38,7 @@ a {
   padding: 2em;
   border: 1px solid #dcdcff;
   border-radius: 5px;
-  background-color: #444;
+  background-color: #white;
 }
 table {
   clear: both;
@@ -46,7 +46,7 @@ table {
   border: 1px solid #dcdcff;
   border-radius: 3px;
   border-collapse: collapse;
-  color: #444;
+  color: #black;
   font-family: "Helvetica Neue";
   
 }
@@ -54,16 +54,16 @@ td {
   height: 48px;
   text-align: center;
   vertical-align: middle;
-  border-right: 1px solid #dcdcff;
-  border-top: 1px solid #dcdcff;
+  border-right: 1px solid black;
+  border-top: 1px solid black;
   width: 14.28571429%;
 }
 td.not-current {
-  color: #c0c0c0;
+  color: #black;
 }
 td.today {
   font-weight: 700;
-  color: 444;
+  color: #444;
   font-size: 1.5em;
 }
 thead td {
@@ -96,7 +96,7 @@ thead td {
   border: none;
   outline: none;
   font-size: 1em;
-  color: #c0c0c0;
+  color: #black;
   cursor: pointer;
   font-family: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
@@ -105,6 +105,6 @@ thead td {
 }
 #btnPrev:hover,
 #btnNext:hover {
-  color: #444;
+  color: black;
   font-weight: bold;
 }
