maps.html added

--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -124,7 +124,7 @@ input[type=submit]:hover {
     </div>
     <div class="row">
     <form action="agenda.html">
-      <input type="submit" value="Submit">
+    <button class="btn btn-primary btn-large f4 btn-block" type="submit" value="SubmitAgenda" name="agendaSubmit">Submit Event</button>
     </form>
     </div>
 </div>
