--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -3,7 +3,7 @@
     <title>InterviewIQ</title>
     <style>
 
-      
+
     .logo {
   text-align: center;
       padding: 20px;
@@ -18,8 +18,8 @@
 
 
 }
-      
-      
+
+
     .ul-style {
        list-style-type: none;
        margin: 0;
@@ -89,15 +89,15 @@ h1 {
        overflow: hidden;
        background-color: #ECF1EF;
       }
-    
-   
+
+ 
       }
-    
+
 </style>
     <link href="../static/interviewQA.css" rel="stylesheet">
 
   <body>
-    
+
   <ul class="ul-style">
    <li style="float:left"><a href="index.html" class="a-dropbtn">Home    </a></li>
    <li style="float:left"><a href="agenda.html" class="a-dropbtn">Agenda    </a></li>
@@ -116,16 +116,16 @@ h1 {
    <li class="dropdown" style="float:right">
      <a href="javascript:void(0)" class="a-dropbtn"> Account Information</a>
      <div class="dropdown-content">
-       <a href="#">Profile</a>
+       <a href="profile.html">Profile</a>
        <a href="signout.html">Sign Out</a>
      </div>
    </li>
   </ul>
-    
+
    <img src="{{ url_for('static', filename='InterviewIQ2.jpg') }}" type="image/jpg" class="logo"> </li>
 
-    
+
    {% block content %} {% endblock %}
-    
+
   </body>
 </html>
