--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -99,6 +99,7 @@ h1 {
    <li style="float:left"><a href="agenda.html" class="a-dropbtn">Agenda    </a></li>
    <li style="float:left"><a href ="Calendar.html" class="a-dropbtn">Calendar    </a></li>
    <li style="float:left"><a href="clothing.html" class="a-dropbtn">Clothing    </a></li>
+   <li style="float:left"><a href="maps.html" class="a-dropbtn">Map </a></li>
    <li style="float:left"><a href="interviewQA.html" class="a-dropbtn">InterviewQ&A    </a></li>
    <li class="dropdown">
      <a href="javascript:void(0)" class="a-dropbtn"> Interviews</a>
