--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -103,6 +103,30 @@ input[type=submit]:hover {
         </select>
       </div>
     </div>
+ <div class="row">
+      <div class="col-25">
+        <label for="cname">Location</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="cname" name="companyname" placeholder="Type here..">
+      </div>
+    </div>
+ <div class="row">
+      <div class="col-25">
+        <label for="cname">Date</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="cname" name="companyname" placeholder="Type here..">
+      </div>
+    </div>
+ <div class="row">
+      <div class="col-25">
+        <label for="cname">Time</label>
+      </div>
+      <div class="col-75">
+        <input type="text" id="cname" name="companyname" placeholder="Type here..">
+      </div>
+    </div>
     <div class="row">
       <div class="col-25">
         <label for="cname">Company Name</label>
