--- a/business_app/app/templates/Calendar.html
+++ b/business_app/app/templates/Calendar.html
@@ -1,14 +1,19 @@
+<!--implementation of the calendar feature-->
+
 <!DOCTYPE html>
 <html >
 <head>
   <meta charset="UTF-8">
   <title>Calendar</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
+	
+<!-- included links to calendar interface --> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   <link rel='stylesheet prefetch' href='http://fonts.googleapis.com/css?family=Roboto:400|Roboto+Condensed:400|Fjalla+One:400'>
 <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css'>
 
+<!-- calendar interface is included under style.css --> 
       <link rel="stylesheet" href="../static/style.css">
 
   
@@ -20,7 +25,7 @@
 	  <button id="btnNext" type="button">Next</button>
   <div id="divCal"></div>
 </div>
-  
+  <!-- implementation of calendar created with javascript under Calendar.js --> 
     <script src="../static/Calendar.js"></script>
 
 </body>
