--- a/business_app/app/templates/about.html
+++ b/business_app/app/templates/about.html
@@ -2,6 +2,8 @@
 {% extends "header.html" %}
 {% block content %}
 
+<!-- Simple about page explaining who we are and what we have created --> 
+
 <h1> <center> We are InterviewIQ, a group of students coming together to help you succeed!<center></h1>
 <p>This webapp is our Software Engineering project at FSU, we came up with the idea because there is no
    easy way to organize interviews, meeting with potential employers, or the numerous career fairs offered.</p>
