--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- included link to the agenda interface --> 
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  
 
 <style>
 
@@ -13,7 +16,9 @@
 * {
     box-sizing: border-box;
 }
-
+  
+<!--text area for the user to implement their upcoming events--> 
+  
 input[type=text], select, textarea{
     width: 100%;
     padding: 12px;
@@ -79,6 +84,8 @@ input[type=submit]:hover {
 </style>
 </head>
 <body>
+  <!-- form created for the user to input their info --> 
+  
   <form class="agenda-form" action="" method="POST">
 <h2><center>Add New Event<center></h2>
 
