--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -1,4 +1,7 @@
 <html>
+  
+  <!-- overall connection page, connects the home log in page to the features of the application --> 
+  
   <head>
     <title>InterviewIQ</title>
     <style>
@@ -92,6 +95,8 @@ h1 {
 </style>
     <link href="../static/interviewQA.css" rel="stylesheet">
 
+   <!-- connections between the other features to the home page, finalized, tested and complete --> 
+    
   <body>
 
   <ul class="ul-style">
@@ -119,6 +124,7 @@ h1 {
    </li>
   </ul>
 
+  <!-- source code connection to our logo --> 
    <img src="{{ url_for('static', filename='InterviewIQ2.jpg') }}" type="image/jpg" class="logo"> </li>
 
 
