--- a/business_app/app/templates/index.html
+++ b/business_app/app/templates/index.html
@@ -2,6 +2,8 @@
 {% extends "header.html" %}
 {% block content %}
 
+<!-- simple home page after the user logs in --> 
+
 <style>
   h1{
     font-family: "Helvetica Neue";
