Database and agenda updated to include location, date, and time

--- a/business_app/app/templates/profile.html
+++ b/business_app/app/templates/profile.html
@@ -34,6 +34,15 @@
                         <p><b>
                             Event Type</b>: {{ a['eventType'] }}
                         </p>
+			<p><b>
+                            Location</b>: {{ a['location'] }}
+                        </p>
+			<p><b>
+                            Date</b>: {{ a['date'] }}
+                        </p>
+			<p><b>
+                            Time</b>: {{ a['time'] }}
+                        </p>
                         <p><b>
                             Company</b>: {{ a['compName'] }}
                         </p>
