--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -105,26 +105,26 @@ input[type=submit]:hover {
     </div>
  <div class="row">
       <div class="col-25">
-        <label for="cname">Location</label>
+        <label for="location">Location</label>
       </div>
       <div class="col-75">
-        <input type="text" id="cname" name="companyname" placeholder="Type here..">
+        <input type="text" id="location" name="location" placeholder="Type here..">
       </div>
     </div>
  <div class="row">
       <div class="col-25">
-        <label for="cname">Date</label>
+        <label for="date">Date</label>
       </div>
       <div class="col-75">
-        <input type="text" id="cname" name="companyname" placeholder="Type here..">
+        <input type="text" id="date" name="date" placeholder="Type here..">
       </div>
     </div>
  <div class="row">
       <div class="col-25">
-        <label for="cname">Time</label>
+        <label for="time">Time</label>
       </div>
       <div class="col-75">
-        <input type="text" id="cname" name="companyname" placeholder="Type here..">
+        <input type="text" id="time" name="time" placeholder="Type here..">
       </div>
     </div>
     <div class="row">
