--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -2,6 +2,8 @@
 {% block content %}
 
 <html>
+	
+<!-- common interview questions and answers for the user to use as a guide before an interviw --> 
 
 	
 <style>
