--- a/business_app/app/templates/maps.html
+++ b/business_app/app/templates/maps.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- google maps implementation for the user to locate where their event is taking place --> 
+
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
