--- a/business_app/app/templates/profile.html
+++ b/business_app/app/templates/profile.html
@@ -1,5 +1,8 @@
 {% extends "header.html" %}
 {% block content %}
+
+<!-- code for the users agenda and upcoming events that will be saved into the database --> 
+
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
