--- a/business_app/app/templates/register.html
+++ b/business_app/app/templates/register.html
@@ -1,4 +1,7 @@
 <head>
+  
+ <!-- completed user profile for the login page --> 
+  
   <title>InterviewIQ</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
