--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -65,7 +65,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
 <p>Tell me about yourself.</p>
 <form>
-<input type="text">
+<input type="text" id="Qyourself" name="yourself" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
@@ -78,7 +78,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>What are some of your short and long term goals?</p>
 <form>
-<input type="text">
+<input type="text" id="Qgoals" name="goals" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
@@ -90,7 +90,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>Why should we hire you? What do you bring to the table?</p>
 <form>
-<input type="text">
+<input type="text" id="Qwhy" name="why" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
@@ -114,7 +114,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>What are you expecting as far as compensation?</p>
 <form>
-<input type="text">
+<input type="text" id="Qexpecting" name="expecting" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
@@ -126,7 +126,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>What are your strengths and weaknesses?</p>
 <form>
-<input type="text">
+<input type="text" id="Qstrweak" name="strweak" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
@@ -138,7 +138,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>Why do you want to leave your current job? Why did you leave your previous job?</p>
 <form>
-<input type="text">
+<input type="text" id="Qleave" name="leave" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
@@ -150,7 +150,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
  <p>How would your previous/current boss or coworkers describe you?</p>
 <form>
-<input type="text">
+<input type="text" id="Qdescribe" name="describe" placeholder="Type here..">
 </form>
 
       <button class="accordion">Tips + Do's/Don'ts</button>
@@ -163,7 +163,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>Tell me about a time you were in the midst of a stressful situation, and how did you deal with it?</p>
 <form>
-<input type="text">
+<input type="text" id="Qsituation" name="situation" placeholder="Type here..">
 </form>
 
 
@@ -177,7 +177,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>What are your goals for this position?</p>
 <form>
-<input type="text">
+<input type="text" id="Qposition" name="position" placeholder="Type here..">
 </form>
 
          <button class="accordion">Tips + Do's/Don'ts</button>
@@ -189,7 +189,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>Tell me about a time you disagreed with a decision that was make at work and how did you deal with it?</p>
 <form>
-<input type="text">
+<input type="text" id="Qdecision" name="decision" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
@@ -201,7 +201,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>Do you have any questions for us?</p>
 <form>
-<input type="text">
+<input type="text" id="Qquestions" name="questions" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
