--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -107,12 +107,14 @@ h1 {
    <li style="float:left"><a href="maps.html" class="a-dropbtn">Map </a></li>
    <li style="float:left"><a href="interviewQA.html" class="a-dropbtn">InterviewQ&A    </a></li>
    <li class="dropdown">
+     <form action="" method 'post'>
      <a href="javascript:void(0)" class="a-dropbtn"> Interviews</a>
      <div class="dropdown-content">
-       <a href="#">Interview 1</a>
-       <a href="#">Interview 2</a>
-       <a href="#">Interview 3</a>
+       <a href="database.py">Interview 1</a>
+       <a href="database.py">Interview 2</a>
+       <a href="database.py">Interview 3</a>
      </div>
+     </form> 
    </li>
    <li style="float:left"><a class="a-dropbtn" href="about.html">AboutUs</a></li>
    <li class="dropdown" style="float:right">
