--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -106,7 +106,7 @@ h1 {
    <li style="float:left"><a href="clothing.html" class="a-dropbtn">Clothing    </a></li>
    <li style="float:left"><a href="maps.html" class="a-dropbtn">Map </a></li>
    <li style="float:left"><a href="interviewQA.html" class="a-dropbtn">InterviewQ&A    </a></li>
-   <li class="dropdown">
+    <li class="dropdown"><a href "{{ url_for('database')}}>Interviews</a></li>
      <form action="" method 'post'>
      <a href="javascript:void(0)" class="a-dropbtn"> Interviews</a>
      <div class="dropdown-content">
