--- a/business_app/app/templates/profile.html
+++ b/business_app/app/templates/profile.html
@@ -55,8 +55,10 @@
                         <p><b>
                             Additional Information</b>: {{ a['additional'] }}
                         </p>
+			<input name="agendaSubmit" type="submit" value="Delete Entry">
                         </div>
                         {% endfor %}
+
                     </div>
                 </div>
             </div>
