--- a/business_app/app/templates/header.html
+++ b/business_app/app/templates/header.html
@@ -106,13 +106,12 @@ h1 {
    <li style="float:left"><a href="clothing.html" class="a-dropbtn">Clothing    </a></li>
    <li style="float:left"><a href="maps.html" class="a-dropbtn">Map </a></li>
    <li style="float:left"><a href="interviewQA.html" class="a-dropbtn">InterviewQ&A    </a></li>
-    <li class="dropdown"><a href "{{ url_for('database')}}>Interviews</a></li>
-     <form action="" method 'post'>
+    <li class="dropdown">
      <a href="javascript:void(0)" class="a-dropbtn"> Interviews</a>
      <div class="dropdown-content">
-       <a href="database.py">Interview 1</a>
-       <a href="database.py">Interview 2</a>
-       <a href="database.py">Interview 3</a>
+       <a href="#">Interview 1</a>
+       <a href="#">Interview 2</a>
+       <a href="#">Interview 3</a>
      </div>
      </form> 
    </li>
