--- a/business_app/app/templates/agenda.html
+++ b/business_app/app/templates/agenda.html
@@ -1,3 +1,7 @@
+
+{% extends "header.html" %}
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -170,3 +174,6 @@ input[type=submit]:hover {
 
 </body>
 </html>
+
+  {% endblock %}
+  
