Adding header to the calendar
So user can redirect

--- a/business_app/app/templates/Calendar.html
+++ b/business_app/app/templates/Calendar.html
@@ -1,4 +1,7 @@
 <!--implementation of the calendar feature-->
+{% extends "header.html" %}
+{% block content %}
+
 
 <!DOCTYPE html>
 <html >
@@ -30,3 +33,5 @@
 
 </body>
 </html>
+
+{% endblock %}
