database updated to include interviewQA (with Abigail Arreguin)

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -102,7 +102,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
   <p>Why do you want to work here? What do you know about this company and position?</p>
 <form>
-<input type="text">
+<input type="text" id="Qwant" name="want" placeholder="Type here..">
 </form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
@@ -211,6 +211,9 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 		Don&#8217t: Ask only about the compensation. Don&#8217t say you don&#8217t have any questions.</p>
 </div>
 
+<div class="row">
+    <input name="interviewSubmit" type="submit">
+    </div>
 
 </html>	
 
