--- a/business_app/app/templates/maps.html
+++ b/business_app/app/templates/maps.html
@@ -1,3 +1,6 @@
+{% extends "header.html" %}
+{% block content %}
+
 <!DOCTYPE html>
 <!-- google maps implementation for the user to locate where their event is taking place --> 
 
@@ -175,3 +178,6 @@
          async defer></script>
   </body>
 </html>
+
+{% endblock %}
+
