Updating button name (with Holly Culver)

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -212,7 +212,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
 <div class="row">
-    <input name="interviewSubmit" type="submit">
+    <input name="interviewSubmit" type="submit" value="submit responses">
     </div>
 
 </html>	
