--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -8,6 +8,12 @@
 	
 <style>
 	
+input[type="submit"] {
+    width: 20px; /* width of image */
+    height: 60px; /* height of image */
+    border: 0;
+}
+	
 	h1{
 		color: #444;
 		font-family: "Helvetica Neue";
