--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -9,9 +9,20 @@
 <style>
 	
 input[type="submit"] {
-    width: 20px; /* width of image */
-    height: 60px; /* height of image */
-    border: 0;
+   	padding: 10px 15px 11px !important;
+	font-size: 18px !important;
+	background-color: #57d6c7;
+	font-weight: bold;
+	text-shadow: 1px 1px #57D6C7;
+	color: black;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border: 1px solid #57D6C7;
+	cursor: pointer;
+	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 }
 	
 	h1{
