--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -11,7 +11,7 @@
 input[type="submit"] {
    	padding: 10px 15px 11px !important;
 	font-size: 18px !important;
-	background-color: #57d6c7;
+	background-color: #444;
 	font-weight: bold;
 	text-shadow: 1px 1px #57D6C7;
 	color: black;
