--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -13,7 +13,7 @@ input[type="submit"] {
 	font-size: 18px !important;
 	background-color: #444;
 	font-weight: bold;
-	text-shadow: 1px 1px #57D6C7;
+	text-shadow: 1px 1px #444;
 	color: black;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
