--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -10,6 +10,7 @@
 	
 input[type="submit"] {
    	padding: 10px 15px 11px !important;
+	font-family: "Helvetica Neue";
 	font-size: 18px !important;
 	background-color: #444;
 	font-weight: bold;
