--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -15,11 +15,11 @@ input[type="submit"] {
 	background-color: #444;
 	font-weight: bold;
 	text-shadow: 1px 1px #444;
-	color: black;
+	color: white;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
-	border: 1px solid #57D6C7;
+	border: 1px solid white;
 	cursor: pointer;
 	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
