fixed interviewQA button issue and replaces "user" with "email" for views

--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -2,12 +2,12 @@
 {% block content %}
 
 <html>
-	
-<!-- common interview questions and answers for the user to use as a guide before an interviw --> 
 
-	
+<!-- common interview questions and answers for the user to use as a guide before an interviw -->
+
+
 <style>
-	
+
 input[type="submit"] {
    	padding: 10px 15px 11px !important;
 	font-family: "Helvetica Neue";
@@ -25,12 +25,12 @@ input[type="submit"] {
 	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 }
-	
+
 	h1{
 		color: #444;
 		font-family: "Helvetica Neue";
 	}
-	
+
 body {
 	color: #444;
 	padding-top: 40px;
@@ -39,10 +39,10 @@ body {
 	padding-right: 15px;
 	padding-left: 15px;
 	font-family: "Helvetica Neue";
-	
+
 	}
-	
-	
+
+
 /* Style the buttons that are used to open and close the accordion panel */
 button.accordion {
     background-color: #eee;
@@ -67,10 +67,11 @@ div.panel {
     background-color: white;
     display: none;
 }
-	
+
 </style>
 
-<h1> <center>Welcome to InterviewIQ prep! <center></h1>	
+<form class="interviewQA-form" action="" method="POST">
+<h1> <center>Welcome to InterviewIQ prep! <center></h1>
 
 <p>The following are common interview questions that many interviewers use to get to know their applicants during a face to
 face interview and sometimes a phone interview. Save your responses and edit them as you go so they can evolve into thought
@@ -82,9 +83,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <br>
 
 <p>Tell me about yourself.</p>
-<form>
 <input type="text" id="Qyourself" name="yourself" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -95,9 +94,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
 
   <p>What are some of your short and long term goals?</p>
-<form>
 <input type="text" id="Qgoals" name="goals" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -107,9 +104,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
   <p>Why should we hire you? What do you bring to the table?</p>
-<form>
 <input type="text" id="Qwhy" name="why" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -119,9 +114,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
   <p>Why do you want to work here? What do you know about this company and position?</p>
-<form>
 <input type="text" id="Qwant" name="want" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -131,9 +124,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
   <p>What are you expecting as far as compensation?</p>
-<form>
 <input type="text" id="Qexpecting" name="expecting" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -143,9 +134,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
   <p>What are your strengths and weaknesses?</p>
-<form>
 <input type="text" id="Qstrweak" name="strweak" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -155,9 +144,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
   <p>Why do you want to leave your current job? Why did you leave your previous job?</p>
-<form>
 <input type="text" id="Qleave" name="leave" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -167,9 +154,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
  <p>How would your previous/current boss or coworkers describe you?</p>
-<form>
 <input type="text" id="Qdescribe" name="describe" placeholder="Type here..">
-</form>
 
       <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -180,9 +165,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
 
   <p>Tell me about a time you were in the midst of a stressful situation, and how did you deal with it?</p>
-<form>
 <input type="text" id="Qsituation" name="situation" placeholder="Type here..">
-</form>
 
 
          <button class="accordion">Tips + Do's/Don'ts</button>
@@ -194,9 +177,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
 
   <p>What are your goals for this position?</p>
-<form>
 <input type="text" id="Qposition" name="position" placeholder="Type here..">
-</form>
 
          <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -206,9 +187,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
   <p>Tell me about a time you disagreed with a decision that was make at work and how did you deal with it?</p>
-<form>
 <input type="text" id="Qdecision" name="decision" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -218,9 +197,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
   <p>Do you have any questions for us?</p>
-<form>
 <input type="text" id="Qquestions" name="questions" placeholder="Type here..">
-</form>
 
     <button class="accordion">Tips + Do's/Don'ts</button>
 <div class="panel">
@@ -232,14 +209,14 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <div class="row">
     <input name="interviewSubmit" type="submit" value="submit responses">
     </div>
-
-</html>	
+</form>
+</html>
 
 
 <!-- The following is javascript code for the accordion drop down from https://www.w3schools.com/howto/howto_js_accordion.asp -->
 
 <script>
-	
+
 var acc = document.getElementsByClassName("accordion");
 var i;
 
