--- a/business_app/app/templates/interviewQA.html
+++ b/business_app/app/templates/interviewQA.html
@@ -1,6 +1,11 @@
 {% extends "header.html" %}
 {% block content %}
 
+<head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
+</head>
+
 <html>
 
 <!-- common interview questions and answers for the user to use as a guide before an interviw -->
@@ -70,7 +75,7 @@ div.panel {
 
 </style>
 
-<form class="interviewQA-form" action="" method="POST">
+<form class="agenda-form" action="" method="POST">
 <h1> <center>Welcome to InterviewIQ prep! <center></h1>
 
 <p>The following are common interview questions that many interviewers use to get to know their applicants during a face to
@@ -85,7 +90,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <p>Tell me about yourself.</p>
 <input type="text" id="Qyourself" name="yourself" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: This question is super broad for a reason. It can either make you or break you, so make sure to prepare a thoughtful response. Remember, this should feel more like a conversation than a question-answer time. Don&#8217t forget to ask the interviewer questions, too. <br>
 		Do: Focus on your career. How did you get here? Where do you want to go? Answer this question by highlighting why you are the best candidate. Spend about 3 minutes on this response. <br>
@@ -96,7 +101,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>What are some of your short and long term goals?</p>
 <input type="text" id="Qgoals" name="goals" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: Try to incorporate goals that would be great for your role working with this company and not just for your own gain. <br>
 		Do: Have well thought out goals that pertain to the position you want. <br>
@@ -106,7 +111,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>Why should we hire you? What do you bring to the table?</p>
 <input type="text" id="Qwhy" name="why" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: Be confident. You made it to a face to face interview, so be proud. <br>
 		Do: Sell yourself. Talk about all the strengths you have that you know they are looking for. Talk about the how or why more than the what. Example: I am always on time and meet deadlines vs I am reliable. <br>
@@ -116,7 +121,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>Why do you want to work here? What do you know about this company and position?</p>
 <input type="text" id="Qwant" name="want" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: Research everything there is to know about the company. If you come into contact with someone who already works for the same company, name drop during the interview. <br>
 		Do: Know everything about the company. Be thoughtful with your responses. Make sure you have read the job description.  <br>
@@ -126,7 +131,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>What are you expecting as far as compensation?</p>
 <input type="text" id="Qexpecting" name="expecting" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: Use the word, compensation instead of pay or salary and feel free to ask about benefits too. <br>
 		Do: Avoid asking for details. If they call you and offer you a job, that might be a better time to discuss details.<br>
@@ -136,7 +141,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>What are your strengths and weaknesses?</p>
 <input type="text" id="Qstrweak" name="strweak" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: When talking about your weakness, turn it into a learning process and pair it with a strength. <br>
 		Do: Be confident. If you&#8217re not confident about your strengths then the interviewer might not believe that those are your strengths. Talk about how it has become a strength, the process.  <br>
@@ -146,7 +151,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>Why do you want to leave your current job? Why did you leave your previous job?</p>
 <input type="text" id="Qleave" name="leave" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: If you bash your old job, your current boss will feel uncomfortable and probably won&#8217t want to hire someone who speaks so poorly of those in authority. <br>
 		Do: Pair a compliment from your previous/current boss or environment with a reason why you left or are leaving. Be respectful of those who aren&#8217t present.<br>
@@ -156,7 +161,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
  <p>How would your previous/current boss or coworkers describe you?</p>
 <input type="text" id="Qdescribe" name="describe" placeholder="Type here..">
 
-      <button class="accordion">Tips + Do's/Don'ts</button>
+      <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: This is a great time to answer with your strengths and weaknesses. See your answer for that question.<br>
 		Do: Be genuine and honest unless they hated you. <br>
@@ -168,7 +173,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 <input type="text" id="Qsituation" name="situation" placeholder="Type here..">
 
 
-         <button class="accordion">Tips + Do's/Don'ts</button>
+         <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: Be genuine. Don&#8217t say you&#8217ve never been stressed. Everyone has and your boss will appreciate your honesty. <br>
 		Do: Talk about a situation you were stressed and emphasize the steps you took to fix the situation. Show them that you deal with issues well. <br>
@@ -179,7 +184,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>What are your goals for this position?</p>
 <input type="text" id="Qposition" name="position" placeholder="Type here..">
 
-         <button class="accordion">Tips + Do's/Don'ts</button>
+         <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: Have thoughtful goals that show initiative. Tailor them to the position you&#8217re applying for so they are relevant. But make sure you can follow through. <br>
 		Do: Have goals because they are good to have and not just because it&#8217s a great thing to mention in an interview. Be original. <br>
@@ -189,7 +194,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>Tell me about a time you disagreed with a decision that was make at work and how did you deal with it?</p>
 <input type="text" id="Qdecision" name="decision" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: The purpose of this question is to see how well you can deal with authority. Be careful here&#33 <br>
 		Do: Say you&#8217ll have a respectful conversation with your boss. Feel free to say you never had to deal with this sort of issue but you would probably ... <br>
@@ -199,7 +204,7 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
   <p>Do you have any questions for us?</p>
 <input type="text" id="Qquestions" name="questions" placeholder="Type here..">
 
-    <button class="accordion">Tips + Do's/Don'ts</button>
+    <button class="accordion" type="button">Tips + Do's/Don'ts</button>
 <div class="panel">
   <p>Tip: This is a great time to flatter your interviewer by asking them questions. Ask them about their job and why they love it. These types of questions show respect and initiative. ALWAYS ask a question. <br>
 		Do: Have thoughtful questions prepared before hand. Know who you are talking to. Ask them specific questions about what they do.  <br>
@@ -207,9 +212,10 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 </div>
 
 <div class="row">
-    <input name="interviewSubmit" type="submit" value="submit responses">
+	  <button class="btn btn-primary" type="submit" value="submitted" name="interviewSubmit">Submit responses</button>
     </div>
 </form>
+
 </html>
 
 
